force-app/main/default/objects/Picklist_Translation__mdt/Picklist_Translation__mdt.object-meta.xml
<CustomObject>
    <description>Accessing the Translation Workbench translations is a pain from Apex if the running user isn&apos;t set to the language you want. Here&apos;s some duplicate translations for picklist values until Salesforce improves their Apex API.</description>
    <label>Picklist Translation</label>
    <pluralLabel>Picklist Translations</pluralLabel>
</CustomObject>