force-app/main/default/objects/Picklist_Translation__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>Picklist Field API Name</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>