force-app/main/default/objects/Picklist_Translation__mdt/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <defaultValue>&quot;fr&quot;</defaultValue>
    <description>Locale code e.g. &quot;fr&quot; for French</description>
    <label>Language Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>