force-app/main/default/objects/Picklist_Translation__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>API Name of the Object containing the Picklist</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>