force-app/main/default/objects/Picklist_Translation__mdt/fields/Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Value__c</fullName>
    <description>The value that needs to be translated</description>
    <label>Picklist Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>