force-app/main/default/objects/Picklist_Translation__mdt/fields/Translation__c.field-meta.xml
<CustomField>
    <fullName>Translation__c</fullName>
    <description>Translation for the Picklist Value</description>
    <label>Translation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>